# ogafv2

./: .gitattributes  .gitignore  Cargo.toml  README.md  SECURITY_AUDIT.md  package-lock.json  package.json  prompt.md
.github/workflows/: release.yml
apps/admin/: index.html  package.json  vite.config.ts
apps/admin/src/: App.tsx  main.tsx
apps/admin/src-tauri/: Cargo.toml  tauri.conf.json  tauri.demo.conf.json
apps/admin/src-tauri/capabilities/: default.json
apps/admin/src-tauri/src/: lib.rs  main.rs
apps/admin/src/components/layout/: AppShell.tsx  SessionLockOverlay.tsx  TopNav.tsx
apps/admin/src/pages/: AuditLogsPage.tsx  DashboardPage.tsx  DatabasePage.tsx  ExportCenterPage.tsx  LoginPage.tsx  RecordsCollectionPage.tsx  UsersPage.tsx
apps/main/: index.html  package.json
apps/main/src/: App.tsx
apps/main/src-tauri/: Cargo.toml  tauri.conf.json  tauri.demo.conf.json
apps/main/src-tauri/icons/: icon.icns
apps/main/src-tauri/src/: lib.rs  main.rs
apps/main/src/components/: CameraModal.tsx  PensionerList.tsx
apps/main/src/components/layout/: AppShell.tsx  SessionLockOverlay.tsx  TopNav.tsx
apps/main/src/pages/: EvaluationPage.tsx  LoginPage.tsx  UnverifiedPage.tsx  VerifiedPage.tsx
crates/oagf-backend/: Cargo.toml
crates/oagf-backend/migrations/: 001__initial.sql  002__must_change_password.sql  003__login_attempts.sql  004__pensioner_phone.sql
crates/oagf-backend/src/: lib.rs
crates/oagf-backend/src/audit/: logger.rs  mod.rs
crates/oagf-backend/src/auth/: guard.rs  mod.rs  service.rs
crates/oagf-backend/src/commands/: audit.rs  auth.rs  backup.rs  dashboard.rs  export.rs  mod.rs  pensioners.rs  photos.rs  system.rs  users.rs
crates/oagf-backend/src/db/: embedded.rs  mod.rs  pool.rs
crates/oagf-backend/src/export/: mod.rs  service.rs
crates/oagf-backend/src/fs/: mod.rs
crates/oagf-backend/src/models/: mod.rs  money.rs
crates/oagf-backend/tests/: concurrency.rs  multi_window.rs  performance.rs  security.rs
shared/ui/: package.json
shared/ui/src/: index.ts
shared/ui/src/components/: index.ts
shared/ui/src/components/pages/: ChangePasswordPage.tsx
shared/ui/src/hooks/: index.ts  useSessionTimeout.ts
shared/ui/src/services/: api.ts  tauri.ts  tauriMock.ts
shared/ui/src/store/: authStore.ts  uiStore.ts
shared/ui/src/styles/: index.css
shared/ui/src/types/: index.ts
shared/ui/src/utils/: constants.ts  formatters.ts  index.ts  validators.ts
tests/e2e/: demo_screenshot.py
(+12 files in other folders)
