[package]
name = "oagf-backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Shared backend for OAGF Pension Severance desktop apps"

[lib]
name = "oagf_backend"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"

# Async runtime
tokio = { version = "1", features = ["full"] }

# PostgreSQL database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate", "rust_decimal"] }

# Auth
argon2 = "0.5"
password-hash = "0.5"
rand = "0.8"

# Session tokens and hashing
uuid = { version = "1", features = ["v4", "v7", "serde"] }
ring = "0.17"
hex = "0.4"

# Export
csv = "1"
rust_xlsxwriter = "0.80"

# Decimal types for financial data
rust_decimal = { version = "1", default-features = false, features = ["serde-float", "std"] }

# Optional field-level encryption
aes-gcm = "0.10"

# Logging
log = "0.4"

# Directory traversal
walkdir = "2"
nokhwa = { version = "0.10", features = ["input-native"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
base64 = "0.22"

[features]
default = []
demo = []

[lints.rust]
unsafe_code = "forbid"
