[package]
name = "oagf-admin-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "OAGF Pension Severance — Admin App"

[lib]
name = "oagf_admin_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
oagf-backend = { path = "../../../crates/oagf-backend" }
